--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         flex: 1;
       }
     </style>
-  <link rel="preload" href="/_expo/static/css/web-5f0bee34562dfbe1455469a897ab85aa.css" as="style"><link rel="stylesheet" href="/_expo/static/css/web-5f0bee34562dfbe1455469a897ab85aa.css"><link rel="icon" href="/favicon.ico" /></head>
+  <link rel="preload" href="/lexia-app/_expo/static/css/web-5f0bee34562dfbe1455469a897ab85aa.css" as="style"><link rel="stylesheet" href="/lexia-app/_expo/static/css/web-5f0bee34562dfbe1455469a897ab85aa.css"><link rel="icon" href="/lexia-app/favicon.ico" /></head>
 
   <body>
     <!-- Use static rendering with Expo Router to support running without JavaScript. -->
@@ -32,6 +32,6 @@
     </noscript>
     <!-- The root element for your Expo app. -->
     <div id="root"></div>
-  <script src="/_expo/static/js/web/index-d943dee537a785b59add1a8811aaa7e2.js" defer></script>
+  <script src="/lexia-app/_expo/static/js/web/index-d943dee537a785b59add1a8811aaa7e2.js" defer></script>
 </body>
 </html>
